[MODORDSTOR-516] Fix sonar issues